# AI-dj

./: .gitignore  README.md  index.html  test_full_flow.py  test_websocket.py
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json
frontend/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: dj-mixer.tsx  mix-complete.tsx  mix-history.tsx  mix-progress.tsx  prompt-input.tsx  queue-panel.tsx  settings-modal.tsx  turn-table.tsx
frontend/lib/: mix-context.tsx
frontend/public/: tracks.json
services/: docker-compose.yml
services/ai-orchestrator/: Dockerfile  main.py  playlist_generator.py  prompt_interpreter.py  requirements.txt  trends.py
services/audio-processor/: Dockerfile  analyzer.py  cdn.py  downloader.py  main.py  renderer.py  requirements.txt
services/backend/: Cargo.toml  Dockerfile
services/backend/migrations/: 001_initial_schema.sql  20240115000000_create_mix_tables.sql
services/backend/src/: db.rs  main.rs  secrets.rs
services/backend/src/controllers/: mod.rs  parser.rs  root.rs  song.rs  spotify.rs
services/backend/src/models/: mix.rs  mod.rs  song.rs
services/backend/src/routers/: mod.rs  root.rs  song.rs  spotify.rs
