[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
tokio-stream = "0.1"
async-stream = "0.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",     
    "macros",        
    "uuid",          
    "chrono",        
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
oauth-axum = "0.1.4"
redis = { version = "0.32.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.24.0"

# WebSocket support
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio-tungstenite = "0.26"
futures = "0.3"
futures-util = "0.3"

# URL encoding
urlencoding = "2.1"

# UUID for session IDs
uuid = { version = "1.0", features = ["v4"] }

# Cryptographic randomness for OAuth state
rand = "0.8"

# URL parsing for SSRF protection
url = "2.5"
